--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "browserify-fs": "^1.0.0",
+    "clipboard": "^1.7.1",
+    "fs": "0.0.1-security",
+    "http-server": "^0.10.0",
     "sha256": "^0.2.0"
   }
 }
